package lab2.pojos;

public interface saleableItem {
    double getPrice();
    void sellItem();
}